aws cli output as json

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,7 +11,7 @@ linters:
     - staticcheck
     - govet
     - gosec
-    - deadcode
+    - unused
     - ineffassign
     - misspell
     - unconvert
