--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
         name = Austin Gebauer
         email = agebauer@hashicorp.com
 [core]
-        excludesfile = .gitignore_global
+        excludesfile = /Users/agebauer/.gitignore_global
 [pager]
         branch = false
 [filter "lfs"]
