--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,20 +1,24 @@
 # Example at: https://github.com/golangci/golangci-lint/blob/master/.golangci.example.yml
 
 run:
-  timeout: 3m
+  timeout: 5m
   tests: true
-  modules-download-mode: readonly
 
 linters:
-  disable-all: true
   enable:
-    - staticcheck
+    - errcheck
     - govet
-    - gosec
-    - unused
     - ineffassign
+    - unused
+    - bodyclose
+    - gocritic
     - misspell
     - unconvert
+    - staticcheck
+    - gosimple
+    - stylecheck
+    - goimports
+    - depguard
 
 linters-settings:
   govet:
@@ -24,3 +28,17 @@ linters-settings:
     locale: US
     ignore-words:
       - keymgmt
+      - cancelled
+  stylecheck:
+    checks: [ "all", "-ST1003" ]
+
+issues:
+  exclude:
+    - ifElseChain
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - bodyclose
+    - linters:
+        - staticcheck
+      text: "SA1019:"
