--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
         name = Austin Gebauer
-        email = agebauer@hashicorp.com
+        email = gebauer.austin@gmail.com
 [core]
         excludesfile = /Users/agebauer/.gitignore_global
 [pager]
