--- a/.terraformrc
+++ b/.terraformrc
@@ -1,7 +1,7 @@
 provider_installation {
    dev_overrides {
-     "hashicorp/vault" = "/Users/agebauer/.terraform.d/plugins"
-     "hashicorp/hcp" = "/Users/agebauer/.terraform.d/plugins"
+     "hashicorp/vault" = "/Users/austingebauer/.terraform.d/plugins"
+     "hashicorp/hcp" = "/Users/austingebauer/.terraform.d/plugins"
    }
 
    #    For all other providers, install them directly from their origin provider
